# ot-harjoitustyo

./: .gitignore  README.md
app/: pyproject.toml
app/dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
fog-app/: pyproject.toml
fog-app/data/: helsinki.json  london.json
fog-app/dokumentaatio/: changelog.md  tuntikirjanpito.md
fog-app/src/: index.py  weather.py  weatherdata.py
fog-app/src/UI/: ui.py
fog-app/src/tests/: fogapp_test.py
fogapp/: .coveragerc  .pylintrc  muistute.md  pyproject.toml  tasks.py
fogapp/data/: helsinki.json  new+york.json  paris.json
fogapp/dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
fogapp/src/: .gitignore  apikey.py  index.py
fogapp/src/tests/: fogapp_test.py
fogapp/src/ui/: cli.py  converter.py  main_view.py  ui.py
fogapp/src/util/: apimanipulation.py  fileaction.py  filemanipulation.py  weatherdata.py  weatherdata_fromapi.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hkl_sekvenssikaavio.md  kone_sekvenssikaavio.md  monopoli.md  pyproject.toml  tasks.py
